--- a/register.html
+++ b/register.html
@@ -59,7 +59,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/campanile.jpeg')">
+    <header class="masthead" style="background-image: url('img/clearview.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
