--- a/about.html
+++ b/about.html
@@ -77,8 +77,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+          <h2 class="section-heading text-uppercase"> Our History</h2>
+          <p>The Berkeley Investment Group was founded in 1997 to address the lack of a community for students interested in investing. Since then, the Berkeley Investment Group has grown this community into multiple educational programs, weekly member meetings, and an officer corps that manages over $130,000. Learning how to invest is our core principle and our fund enables us to put our accumulated investing knowledge into practice. Our interest-driven culture has and will continue to supplement the refined, professional-grade curriculum and opportunities that we offer.</p>
+          <h2 class="section-heading text-uppercase"> Our History</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
+          <h2 class="section-heading text-uppercase"> Our History</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
         </div>
       </div>
