--- a/program.html
+++ b/program.html
@@ -74,51 +74,54 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-          <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
-          <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
-          <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-          <form name="sentMessage" id="contactForm" novalidate>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Name</label>
-                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Email Address</label>
-                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group col-xs-12 floating-label-form-group controls">
-                <label>Phone Number</label>
-                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Message</label>
-                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <br>
-            <div id="success"></div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
-            </div>
-          </form>
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase"> The Event</h2>
+            <p class="text-muted">The Berkeley Investment Conference is an annual national investment competition hosted at the UC Berkeley campus on March 16th-17th. The competition allows 40 passionate and talented undergraduate students from top universities across the nation to showcase their analytical talents, refine their investing skill-sets, expand their network and meet with people who share similar passions. Admission to the conference will be on the basis of the rigor of equity-analysis in a form of an investment memo, and selected teams will present their stock pitches in front of a judging panel of professional investors for a chance to present their pitches as finalists to win the competition.</p>
+          </div>
+        </div>
+    </section>
+
+    <!-- What we offer icons and blurb -->
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">What We Offer</h2>
+            <h3 class="section-subheading text-muted">March 16-17</h3>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-book fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Learn</h4>
+            <p class="text-muted">Learn about investing from top-tier professionals in the Bay Area and develop investing skills by interacting with fellow peers</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Share</h4>
+            <p class="text-muted"> Share ideas throughout the conference and present to an audience of undergraduates passionate in investing</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-users fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Compete</h4>
+            <p class="text-muted">Compete against rival teams from across the nation to see who has the best investment pitch for a prize pool for $______</p>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
+
 
     <hr>
 
