--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <header class="masthead">
       <div class = 'video-container'>
         <video preload = 'true' autoplay = 'autoplay' loop = 'loop' volume = '0' poster = '/img/map-image.png' muted>
-          <source src = 'video/berkeley.mp4' type = 'video/mp4'>
+          <source src = 'video/punjabi.mp4' type = 'video/mp4'>
           </video>
       </div>
       <div class="overlay"></div>
@@ -81,6 +81,19 @@
     </header>
 
     <!-- Main Content -->
+
+    <!-- Our Event -->
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase"> The Event</h2>
+            <p class="text-muted">The Berkeley Investment Conference is an annual national investment competition hosted at the UC Berkeley campus on March 16th-17th. The competition allows 40 passionate and talented undergraduate students from top universities across the nation to showcase their analytical talents, refine their investing skill-sets, expand their network and meet with people who share similar passions. Admission to the conference will be on the basis of the rigor of equity-analysis in a form of an investment memo, and selected teams will present their stock pitches in front of a judging panel of professional investors for a chance to present their pitches as finalists to win the competition.</p>
+          </div>
+        </div>
+    </section>
+
+    <!-- What we offer icons and blurb -->
     <section id="services">
       <div class="container">
         <div class="row">
@@ -93,30 +106,32 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-book fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">E-Commerce</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Learn</h4>
+            <p class="text-muted">Learn about investing from top-tier professionals in the Bay Area and develop investing skills by interacting with fellow peers</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Responsive Design</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Share</h4>
+            <p class="text-muted"> Share ideas throughout the conference and present to an audience of undergraduates passionate in investing</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-users fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Web Security</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Compete</h4>
+            <p class="text-muted">Compete against rival teams from across the nation to see who has the best investment pitch for a prize pool for $______</p>
           </div>
         </div>
       </div>
     </section>
+
+
     <!--
     <div class="container">
       <div class="row">
@@ -217,7 +232,7 @@
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
+            <p class="copyright text-muted">Copyright &copy; Berkeley Inv 2018</p>
           </div>
         </div>
       </div>
