github pages formating

--- a/program.html
+++ b/program.html
@@ -59,7 +59,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/haas.jpg')">
+    <header class="masthead" style="background-image: url('img/Haas.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
