--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/Execs0.jpg')">
+    <header class="masthead" style="background-image: url('img/Execs.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
