video container fixes

--- a/speakers.html
+++ b/speakers.html
@@ -62,14 +62,14 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/Haas.jpg')">
+    <header class="masthead" style="background-image: url('img/clearview.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>We Host</h1>
-              <span class="subheading">The University of California, Berkeley's first investment competition</span>
+              <h1>Our Speakers</h1>
+              <span class="subheading">are here for you</span>
             </div>
           </div>
         </div>
@@ -77,54 +77,18 @@
     </header>
 
     <!-- Main Content -->
-    <section id="services">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase"> The Event</h2>
-            <p class="text-muted">The Berkeley Investment Conference is an annual national investment competition hosted at the UC Berkeley campus on March 16th-17th. The competition allows 40 passionate and talented undergraduate students from top universities across the nation to showcase their analytical talents, refine their investing skill-sets, expand their network and meet with people who share similar passions. Admission to the conference will be on the basis of the rigor of equity-analysis in a form of an investment memo, and selected teams will present their stock pitches in front of a judging panel of professional investors for a chance to present their pitches as finalists to win the competition.</p>
-          </div>
-        </div>
-    </section>
-
-    <!-- What we offer icons and blurb -->
-    <section id="services">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">What We Offer</h2>
-            <h3 class="section-subheading text-muted">March 16-17</h3>
-          </div>
-        </div>
-        <div class="row text-center">
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-book fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Learn</h4>
-            <p class="text-muted">Learn about investing from top-tier professionals in the Bay Area and develop investing skills by interacting with fellow peers</p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Share</h4>
-            <p class="text-muted"> Share ideas throughout the conference and present to an audience of undergraduates passionate in investing</p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-users fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Compete</h4>
-            <p class="text-muted">Compete against rival teams from across the nation to see who has the best investment pitch for a prize pool for $______</p>
-          </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <h2 class="section-heading text-uppercase"> Our History</h2>
+          <p>The Berkeley Investment Group was founded in 1997 to address the lack of a community for students interested in investing. Since then, the Berkeley Investment Group has grown this community into multiple educational programs, weekly member meetings, and an officer corps that manages over $130,000. Learning how to invest is our core principle and our fund enables us to put our accumulated investing knowledge into practice. Our interest-driven culture has and will continue to supplement the refined, professional-grade curriculum and opportunities that we offer.</p>
+          <h2 class="section-heading text-uppercase"> Our History</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
+          <h2 class="section-heading text-uppercase"> Our History</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
         </div>
       </div>
-    </section>
-
+    </div>
 
     <hr>
 
@@ -168,10 +132,6 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/clean-blog.min.js"></script>
