--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
               <a class="nav-link" href="outreach.html">Sponsors</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="speakers.html">Speakers</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="register.html">Registration</a>
             </li>
             <li class="nav-item">
