--- a/outreach.html
+++ b/outreach.html
@@ -48,6 +48,9 @@
               <a class="nav-link" href="outreach.html">Sponsors</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="speakers.html">Speakers</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="register.html">Registration</a>
             </li>
             <li class="nav-item">
@@ -66,7 +69,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
               <h1>Our Sponsors</h1>
-              <span class="subheading">Best in the West</span>
+              <span class="subheading">best in the West</span>
             </div>
           </div>
         </div>
