--- a/register.html
+++ b/register.html
@@ -48,6 +48,9 @@
               <a class="nav-link" href="outreach.html">Sponsors</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="speakers.html">Speakers</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="register.html">Registration</a>
             </li>
             <li class="nav-item">
@@ -59,7 +62,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/clearview.jpg')">
+    <header class="masthead" style="background-image: url('img/sather.jpeg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
