--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link rel="stylesheet" type="text/css" href="css/copy.css">
 
   </head>
 
@@ -235,7 +236,7 @@
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; Berkeley Inv 2018</p>
+            <p class="copyright text-muted">Copyright &copy; Berkeley Investment Group 2018</p>
           </div>
         </div>
       </div>
