--- a/speakers.html
+++ b/speakers.html
@@ -20,6 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/copy.css">
 
   </head>
 
@@ -80,12 +81,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <h2 class="section-heading text-uppercase"> Our History</h2>
-          <p>The Berkeley Investment Group was founded in 1997 to address the lack of a community for students interested in investing. Since then, the Berkeley Investment Group has grown this community into multiple educational programs, weekly member meetings, and an officer corps that manages over $130,000. Learning how to invest is our core principle and our fund enables us to put our accumulated investing knowledge into practice. Our interest-driven culture has and will continue to supplement the refined, professional-grade curriculum and opportunities that we offer.</p>
-          <h2 class="section-heading text-uppercase"> Our History</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-          <h2 class="section-heading text-uppercase"> Our History</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+          <h2 class="section-heading text-uppercase"> Coming Soon!</h2>
+          <p></p>
+          <h2 class="section-heading text-uppercase"></h2>
+          <p></p>
+          <h2 class="section-heading text-uppercase"> </h2>
+          <p></p>
         </div>
       </div>
     </div>
@@ -123,7 +124,7 @@
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
+            <p class="copyright text-muted">Copyright &copy; Berkeley Investment Group 2018</p>
           </div>
         </div>
       </div>
