--- a/register.html
+++ b/register.html
@@ -20,6 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/copy.css">
 
   </head>
 
@@ -156,7 +157,7 @@
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
+            <p class="copyright text-muted">Copyright &copy; Berkeley Investment Group 2018</p>
           </div>
         </div>
       </div>
