--- a/program.html
+++ b/program.html
@@ -82,13 +82,15 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase"> The Event</h2>
-            <p class="text-muted">The Berkeley Investment Conference is an annual national investment competition hosted at the UC Berkeley campus on March 16th-17th. The competition allows 40 passionate and talented undergraduate students from top universities across the nation to showcase their analytical talents, refine their investing skill-sets, expand their network and meet with people who share similar passions. Admission to the conference will be on the basis of the rigor of equity-analysis in a form of an investment memo, and selected teams will present their stock pitches in front of a judging panel of professional investors for a chance to present their pitches as finalists to win the competition.</p>
+            <h2 class="section-heading text-uppercase">How It Works</h2>
+            <p>The Berkeley Investment Conference is divided into 3 rounds.</p>
+            <h2 class="section-heading text-uppercase">Schedule</h2>
           </div>
         </div>
     </section>
 
     <!-- What we offer icons and blurb -->
+    <!--
     <section id="services">
       <div class="container">
         <div class="row">
@@ -125,7 +127,7 @@
         </div>
       </div>
     </section>
-
+  -->
 
     <hr>
 
