--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase"> The Event</h2>
+            <h3 class="section-subheading text-muted">
+            __________________________________
+
+          </h3>
             <p class="text-muted">The Berkeley Investment Conference is an annual national investment competition hosted at the UC Berkeley campus on March 16th-17th. The competition allows 40 passionate and talented undergraduate students from top universities across the nation to showcase their analytical talents, refine their investing skill-sets, expand their network and meet with people who share similar passions. Admission to the conference will be on the basis of the rigor of equity-analysis in a form of an investment memo, and selected teams will present their stock pitches in front of a judging panel of professional investors for a chance to present their pitches as finalists to win the competition.</p>
           </div>
         </div>
@@ -103,7 +107,8 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">What We Offer</h2>
-            <h3 class="section-subheading text-muted">March 16-17</h3>
+            <h3 class="section-subheading text-muted">
+          </h3>
           </div>
         </div>
         <div class="row text-center">
@@ -133,6 +138,17 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- When and where -->
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">When and Where</h2>
+            <p class="text-muted">Throughout University of California, Berkeley from March 16-17th</p>
+          </div>
+        </div>
     </section>
 
 
