--- a/outreach.html
+++ b/outreach.html
@@ -81,7 +81,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <h2 class="section-heading text-uppercase"> Coming Soon!</h2>
+          <h2 class="section-heading text-uppercase"> More Coming Soon!</h2>
           <p></p>
           <p></p>
           <p></p>
