--- a/contact.html
+++ b/contact.html
@@ -81,10 +81,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch? Fill out the form below to send us a message and we will get back to you as soon as possible!</p>
+          <p>Want to get in touch? Feel free to reach out to us at berkeleyinvestmentconference@gmail.com! Staff information coming soon.</p>
           <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
           <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
-          <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
+          <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! --> <!--
           <form name="sentMessage" id="contactForm" novalidate>
             <div class="control-group">
               <div class="form-group floating-label-form-group controls">
@@ -123,7 +123,7 @@
         </div>
       </div>
     </div>
-
+-->
     <hr>
 
     <!-- Footer -->
