--- a/index.html
+++ b/index.html
@@ -134,19 +134,33 @@
               <i class="fa fa-users fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Compete</h4>
-            <p class="text-muted">Compete against rival teams from across the nation to see who has the best investment pitch for a prize pool for $______</p>
+            <p class="text-muted">Compete against rival teams from across the nation to see who has the best investment pitch for a prize pool for $1000</p>
           </div>
         </div>
       </div>
     </section>
 
     <!-- When and where -->
-    <section id="services">
+    <section id="where">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">When and Where</h2>
             <p class="text-muted">Throughout University of California, Berkeley from March 16-17th</p>
+          </div>
+        </div>
+    </section>
+
+    <!-- sponsors -->
+    <section id="sponsors">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">2018 Conference Sponsors</h2>
+            <img src="img/point72.png" alt="sponsor" style="float; width:244px;height:115px;">
+            <img src="img/siris.png" alt="sponsor" style="float; width:320px;height:200px;">
+            <img src="img/deshaw.jpg" alt="sponsor" style="float; width:388.3px;height:100px;">
+            <img src="img/alpine.jpg" alt="sponsor" style="float; width:642px;height:50px;">
           </div>
         </div>
     </section>
