--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - Start Bootstrap Theme</title>
+    <title>Berkeley Investment Cofnerence</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -78,11 +78,23 @@
     </header>
 
     <!-- Main Content -->
+    <body>
+
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <h2 class="section-heading text-uppercase">To Register</h2>
-          <p>1. Send an investment memo to berkeleyinvestmentconference@gmail.com</p>
+
+          <p>1. Send an investment memo to berkeleyinvestmentconference@gmail.com. For more information, please consult the info packet below.</p>
+        </div>
+      </div>
+      <iframe src="img/info.pdf" style="width: 1200px;height: 500px;border: none;"></iframe>
+    </div>
+  </body>
+
+
+
+
           <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
           <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
           <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! --> <!--
