--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - Start Bootstrap Theme</title>
+    <title>Berkeley Investment Conference</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -134,7 +134,7 @@
               <i class="fa fa-users fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Compete</h4>
-            <p class="text-muted">Compete against rival teams from across the nation to see who has the best investment pitch for a prize pool for $1000</p>
+            <p class="text-muted">Compete against rival teams from across the nation for a chance to present to the entire conference and a 1st place prize pool of $1000</p>
           </div>
         </div>
       </div>
@@ -146,7 +146,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">When and Where</h2>
-            <p class="text-muted">Throughout University of California, Berkeley from March 16-17th</p>
+            <p class="text-muted">Throughout the University of California, Berkeley from March 16-17th</p>
           </div>
         </div>
     </section>
