--- a/outreach.html
+++ b/outreach.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - Start Bootstrap Theme</title>
+    <title>Berkeley Investment Cofnerence</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -81,7 +81,20 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <h2 class="section-heading text-uppercase"> More Coming Soon!</h2>
+          <h2 class="section-heading text-uppercase"></h2>
+          <section id="sponsors">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-12 text-center">
+                  <h2 class="section-heading text-uppercase">2018 Conference Sponsors</h2>
+                  <img src="img/point72.png" alt="sponsor" style="float; width:244px;height:115px;">
+                  <img src="img/siris.png" alt="sponsor" style="float; width:320px;height:200px;">
+                  <img src="img/deshaw.jpg" alt="sponsor" style="float; width:388.3px;height:100px;">
+                  <img src="img/alpine.jpg" alt="sponsor" style="float; width:642px;height:50px;">
+                  <h2 class="section-heading text-uppercase">More Coming Soon!</h2>
+                </div>
+              </div>
+          </section>
           <p></p>
           <p></p>
           <p></p>
