--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch? Feel free to reach out to us at berkeleyinvestmentconference@gmail.com! Full staff information coming soon.</p>
+          <p>Want to get in touch? Feel free to reach out to us at berkeleyinvestmentconference@gmail.com!</p>
           <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
           <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
           <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! --> <!--
