--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <i class="fa fa-users fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Compete</h4>
-            <p class="text-muted">Compete against rival teams from across the nation for a chance to present to the entire conference and a 1st place prize pool of $1000</p>
+            <p class="text-muted">Compete against rival teams from across the nation for a chance to present to the entire conference and a total prize pool of $1500</p>
           </div>
         </div>
       </div>
