--- a/outreach.html
+++ b/outreach.html
@@ -70,7 +70,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
               <h1>Our Sponsors</h1>
-              <span class="subheading">best in the West</span>
+              <span class="subheading">best in the west</span>
             </div>
           </div>
         </div>
@@ -91,7 +91,7 @@
                   <img src="img/siris.png" alt="sponsor" style="float; width:320px;height:200px;">
                   <img src="img/deshaw.jpg" alt="sponsor" style="float; width:388.3px;height:100px;">
                   <img src="img/alpine.jpg" alt="sponsor" style="float; width:642px;height:50px;">
-                  <h2 class="section-heading text-uppercase">More Coming Soon!</h2>
+                  <h2 class="section-heading text-uppercase"></h2>
                 </div>
               </div>
           </section>
