--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Welcome</h1>
-              <span class="subheading">We're glad to have you</span>
+              <span class="subheading">We hope to see you at BIC</span>
             </div>
           </div>
         </div>
