--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             <img src="img/siris.png" alt="sponsor" style="float; width:320px;height:200px;">
             <img src="img/deshaw.jpg" alt="sponsor" style="float; width:388.3px;height:100px;">
             <img src="img/alpine.jpg" alt="sponsor" style="float; width:642px;height:50px;">
+            <img src="img/citadel.jpg"alt="sponsor" style="float; width:326px;height:50px; padding-left: 15px;">
           </div>
         </div>
     </section>
