--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -97,7 +97,7 @@
             __________________________________
 
           </h3>
-            <p class="text-muted">The Berkeley Investment Conference is an annual national investment competition hosted at the UC Berkeley campus on March 16th-17th. The competition allows 40 passionate and talented undergraduate students from top universities across the nation to showcase their analytical talents, refine their investing skill-sets, expand their network and meet with people who share similar passions. Admission to the conference will be on the basis of the rigor of equity-analysis in a form of an investment memo, and selected teams will present their stock pitches in front of a judging panel of professional investors for a chance to present their pitches as finalists to win the competition.</p>
+            <p class="text-muted">The Berkeley Investment Conference is an annual national investment competition hosted at the UC Berkeley campus. The competition allows top passionate and talented undergraduate students from top universities across the nation to showcase their analytical talents, refine their investing skill-sets, expand their network and meet with people who share similar passions. Admission to the conference will be on the basis of the rigor of equity-analysis in a form of an investment memo, and selected teams will present their stock pitches in front of a judging panel of professional investors for a chance to present their pitches as finalists to win the competition.</p>
           </div>
         </div>
     </section>
@@ -147,7 +147,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">When and Where</h2>
-            <p class="text-muted">Throughout the University of California, Berkeley from March 16-17th</p>
+            <p class="text-muted">Throughout the University of California, Berkeley from March 16 to 17th</p>
           </div>
         </div>
     </section>
