--- a/register.html
+++ b/register.html
@@ -85,7 +85,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <h2 class="section-heading text-uppercase">To Register</h2>
 
-          <p>1. Send an investment memo to berkeleyinvestmentconference@gmail.com. For more information, please consult the info packet below.</p>
+          <p>1. Send an investment memo to berkeleyinvestmentconference@gmail.com. The file must be in pdf form and be no more than three pages long. For more information, please consult the info packet below.</p>
         </div>
       </div>
       <iframe src="img/info.pdf" style="width: 1200px;height: 500px;border: none;"></iframe>
