--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
   <head>
 
+    <link rel="icon" type="image/x-icon" href="img/logo.png"/>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="Berkeley Investment Group" content="">
 
     <title>Berkeley Investment Conference</title>
 
@@ -244,15 +246,9 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <ul class="list-inline text-center">
               <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/BICbyBIG/">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -260,10 +256,10 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="mailto:berkeleyinvestmentconference@gmail.com">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
