--- a/program.html
+++ b/program.html
@@ -202,15 +202,10 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <ul class="list-inline text-center">
               <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
+
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/BICbyBIG/">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -218,10 +213,10 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="mailto:berkeleyinvestmentconference@gmail.com">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
