--- a/program.html
+++ b/program.html
@@ -95,29 +95,61 @@
         </div>
 
         <div id="Friday" class="tabcontent">
-          <h3>Coming soon</h3> <!--
           <table style="width:100%">
             <tr>
               <th>Event</th>
               <th>Time</th>
             </tr>
             <tr>
-              <td></td>
+              <td>Check-in</td>
+              <td>10am-10:30am</td>
             </tr>
-          </table> -->
+            <tr>
+              <td>Opening Ceremony</td>
+              <td>10:30am-11:30am</td>
+            </tr>
+            <tr>
+              <td>Lunch</td>
+              <td>11:30am-1:30pm</td>
+            </tr>
+            <tr>
+              <td>Conference Logistics</td>
+              <td>1:30pm-2pm</td>
+            </tr>
+          </table>
         </div>
 
         <div id="Saturday" class="tabcontent">
-          <h3>Coming soon</h3><!--
           <table style="width:100%">
             <tr>
               <th>Event</th>
               <th>Time</th>
             </tr>
             <tr>
-              <td>Jill</td>
+              <td>Check-in</td>
+              <td>8:30am-9am</td>
             </tr>
-          </table> -->
+            <tr>
+              <td>Speaker Panel & Logistics</td>
+              <td>9am-10am</td>
+            </tr>
+            <tr>
+              <td>Preliminary Pitches</td>
+              <td>10:30am-2pm</td>
+            </tr>
+            <tr>
+              <td>Final Pitches</td>
+              <td>2pm-3:30pm</td>
+            </tr>
+            <tr>
+              <td>Keynote</td>
+              <td>3:30pm-4:30pm</td>
+            </tr>
+            <tr>
+              <td>Closing Ceremony & Awards</td>
+              <td>4:30pm-5pm</td>
+            </tr>
+          </table>
         </div>
 
         <div id="Pods" class="tabcontent">
