--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
             <img src="img/deshaw.jpg" alt="sponsor" style="float; width:388.3px;height:100px;">
             <img src="img/alpine.jpg" alt="sponsor" style="float; width:642px;height:50px;">
             <img src="img/citadel.jpg"alt="sponsor" style="float; width:326px;height:50px; padding-left: 15px;">
+            <img src="img/prudential.png"alt="sponsor" style="float; width:326px;height:250px; padding-left: 15px;">
+            <img src="img/orbis.jpg"alt="sponsor" style="float; width:326px;height:100px; padding-left: 15px;">
           </div>
         </div>
     </section>
@@ -235,7 +237,6 @@
         </div>
       </div>
     </div>
-
     <hr>
     -->
 
