--- a/outreach.html
+++ b/outreach.html
@@ -92,6 +92,8 @@
                   <img src="img/deshaw.jpg" alt="sponsor" style="float; width:388.3px;height:100px;">
                   <img src="img/alpine.jpg" alt="sponsor" style="float; width:642px;height:50px;">
                   <img src="img/citadel.jpg"alt="sponsor" style="float; width:326px;height:70px; padding-top: 15px;">
+                  <img src="img/prudential.png"alt="sponsor" style="float; width:326px;height:250px; padding-left: 15px;">
+                  <img src="img/orbis.jpg"alt="sponsor" style="float; width:326px;height:100px; padding-left: 15px;">
                   <h2 class="section-heading text-uppercase"></h2>
                 </div>
               </div>
